# othello_IA_agent

./: .gitignore  .mypy  README.md  requirements.txt  setup.cfg
Executable/: Othello  othello
docs/: CRIAR_JOGADORES.md
othello/: __main__.py
othello/abc/: __init__.py  view.py
othello/abstract/: player.py  view.py
othello/adapters/: __init__.py  board_adapter.py
othello/enums/: __init__.py  color.py
othello/misc/: error_dialog.py  line_view.py  runtime_importer.py
othello/models/: __init__.py  board.py  position.py
othello/models/players/: corner_player.py  human_player.py  minimax_ab.py  random_player.py  test_player.py
othello/protocol/: __init__.py  player.py  view.py
othello/views/: __init__.py  console_view.py
